removed content layout from nav-links

--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -532,7 +532,7 @@
               <li><a href="https://chatgpt.com/" target="_blank" rel="noopener noreferrer"><strong>ChatGPT:</strong></a> Generated article drafts, headlines, and meta descriptions, which were refined for tone, clarity, and SEO relevance.</li>
               <li><strong><a href="https://www.midjourney.com/home" target="_blank" rel="noopener noreferrer">MidJourney</strong></a> and <a href="https://openai.com/index/dall-e-3/"><strong>DALL-E:</strong></a> Created vibrant visuals for hero banners and article imagery, giving the blog a bold, futuristic aesthetic.</li>
               <li><a href="https://www.canva.com/" target="_blank" rel="noopener noreferrer"><strong>Canva:</strong></a> Enhanced and styled graphics for a polished, professional look.</li>
-              <li><a href="https://www.relume.io/" target="_blank" rel="noopener noreferrer"><strong>Relume.io:</strong> and <a href="https://app.uizard.io/prototypes" target="_blank" rel="noopener noreferrer"><strong>Uizard:</strong> Provided UI/UX insights to help shape a user-friendly layout.</li>
+              <li><a href="https://www.relume.io/" target="_blank" rel="noopener noreferrer"><strong>Relume.io:</strong></a> and <a href="https://app.uizard.io/prototypes" target="_blank" rel="noopener noreferrer"><strong>Uizard:</strong></a> Provided UI/UX insights to help shape a user-friendly layout.</li>
           </ul>
         </div>
         <hr class="casestudy-hr">
