--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -506,24 +506,24 @@
             <div class="thumbnails fancy-border-img">
               <picture class="github-container">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_616/v1748467140/github-icon_tie2av.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1748467140/github-icon_tie2av.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_642,h_574/v1748467140/github-icon_tie2av.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_418,h_346/v1748467140/github-icon_tie2av.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_294,h_238/v1748467140/github-icon_tie2av.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_292,h_242/v1748467140/github-icon_tie2av.avif"
                   alt="GitHub logo"
-                  width="147"
-                  height="119"
+                  width="146"
+                  height="121"
                   loading="auto"  
-                  style="bject-fit: cover;"
+                  style="aspect-ratio: 146 / 121; object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
