removed hero aspect ratio from all pages that had it

--- a/pages/collections.html
+++ b/pages/collections.html
@@ -459,14 +459,14 @@
 
           <!-- Fallback -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_456,h_256/v1743092340/collections_ky7hd1.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1743092340/collections_ky7hd1.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
-            width="456"
-            height="256"
+            width="164"
+            height="100"
+            style="object-fit: cover"
             fetchpriority="high"
             loading="eager"
             decoding="async"
-            style="object-fit: cover; aspect-ratio: 16 / 9; width: 100%; height: auto;"
           />
         </picture>
         <div class="canvas-skills-title">
