--- a/pages/project3/project3-the-casestudy.html
+++ b/pages/project3/project3-the-casestudy.html
@@ -437,7 +437,7 @@
             alt="Hero image for the Sports Tube Community project—an AI content creation and SEO optimized Blog created by Genny Allison"
             width="164"
             height="168"
-            style="object-fit: cover; aspect-ratio: 164 / 168; width: 100%; height: auto;"
+            style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
