--- a/pages/resume.html
+++ b/pages/resume.html
@@ -380,7 +380,7 @@
             alt="Parents Tech Support project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
             width="164"
             height="102"
-            style="object-fit: cover; aspect-ratio: 164 / 102;"
+            style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
