--- a/pages/skills.html
+++ b/pages/skills.html
@@ -426,7 +426,7 @@
             alt=""
             width="164"
             height="102"
-            style="object-fit: cover; aspect-ratio: 164 / 102;"
+            style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
