added explicit sizing to hamburger icons, testing

--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -429,6 +429,9 @@
             src="/img/hamburger-icon.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
+            fetchpriority="high"
+            width="48"
+            height="48"
             loading="eager"
             fetchpriority="high"
           />
