--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -392,8 +392,8 @@
     <header>
       <nav role="navigation" aria-label="Main navigation">
         <div class="nav-logo">
-            <a href="/index.html">
-              <img
+          <a href="/index.html">
+            <img
               src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_118/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
               width="136"
@@ -412,6 +412,9 @@
             src="/img/hamburger-icon.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
+            fetchpriority="high"
+            width="48"
+            height="48"
             loading="eager"
             fetchpriority="high"
           />
