--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -392,6 +392,9 @@
             src="/img/hamburger-icon.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
+            fetchpriority="high"
+            width="48"
+            height="48"
             loading="eager"
             fetchpriority="high"
           />
