changed explicit the grade sizing, removed aspect ratio on project1 and 2, testing

--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -394,14 +394,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_118/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_546,h_456/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="136"
-              height="59"
+              idth="273"
+              height="228"
               loading="eager"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: cover; aspect-ratio: 136 / 59;"
+              style="object-fit: cover;"
             />
           </a>
         </div>
