applied the changes to the hamburger icon to the rest of the pages

--- a/pages/project3/project3-intro.html
+++ b/pages/project3/project3-intro.html
@@ -395,14 +395,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_144,h_63,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_272,h_118/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="144"
-              height="63"
+              width="136"
+              height="59"
               loading="eager"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: cover; aspect-ratio: 144 / 63;"
+              style="object-fit: cover; aspect-ratio: 136 / 59;"
             />
           </a>
         </div>
@@ -413,6 +413,9 @@
             src="/img/hamburger-icon.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
+            fetchpriority="high"
+            width="48"
+            height="48"
             loading="eager"
             fetchpriority="high"
           />
