applied the grade img changes to all the-grade pages

--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -502,7 +502,7 @@
               alt="AI-powered SEO grade result from Sports Tube Video Blog showing Core Web Vitals optimization"
               width="273"
               height="228"
-              style="object-fit: contain; aspect-ratio: 273 / 228;"
+              style="object-fit: cover; aspect-ratio: 273 / 228;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
