--- a/pages/project4/project4-the-grade.html
+++ b/pages/project4/project4-the-grade.html
@@ -463,11 +463,11 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_624,h_522/v1743469949/seo-grade_mmztmf.avif"
-              alt="AI-powered SEO grade result from Texas Remodelers showing Core Web Vitals optimization"
-              width="312"
-              height="261"
-              style="object-fit: cover;"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_546,h_456/v1743469949/seo-grade_mmztmf.avif"
+              alt="AI-powered SEO grade result from Sports Tube Video Blog showing Core Web Vitals optimization"
+              width="273"
+              height="228"
+              style="object-fit: cover; aspect-ratio: 273 / 228;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
