changed the grade to load auto

--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -503,8 +503,7 @@
               width="273"
               height="228"
               style="object-fit: cover; aspect-ratio: 273 / 228;"
-              loading="lazy"
-              fetchpriority="low"
+              loading="auto"
               decoding="async"
             />
           </picture>
