--- a/pages/project4/project4-the-casestudy.html
+++ b/pages/project4/project4-the-casestudy.html
@@ -57,7 +57,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1749150452/texas-remodelers-hero-mobile_pnrqxt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1749150452/texas-remodelers-hero-mobile_pnrqxt.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -381,7 +381,7 @@
         <div class="menu-toggle" id="menu-toggle" role="button"   
           tabindex="0"  aria-label="Open Menu">
           <img
-            src="/img/hamburger-icon.png"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_96,h_96/v1750202370/hamburger-icon_bullxb.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
             fetchpriority="high"
@@ -389,6 +389,7 @@
             height="48"
             loading="eager"
             fetchpriority="high"
+            style="object-fit: cover; aspect-ratio: 48 /48;"
           />
         </div>
 
@@ -439,10 +440,10 @@
           
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1749150452/texas-remodelers-hero-mobile_pnrqxt.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1749150452/texas-remodelers-hero-mobile_pnrqxt.avif"
             alt="Intro page for Texas Remodelers Wordpress Project showcasing AI-generated content, showing SEO optimization in progress, and responsive layout with links to detailed case study sections"
             width="164"
-            height="100"
+            height="168"
             style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
