--- a/pages/collections.html
+++ b/pages/collections.html
@@ -27,49 +27,46 @@
     <meta name="twitter:image:alt" content="Hero image for the My Work page in Genny Allison’s portfolio" />
     <meta name="twitter:site" content="@allis78978" />
 
-    <!-- ✅ Desktop ≥ 941px -->
+    <!-- Desktop ≥ 941px -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1743092340/collections_ky7hd1.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1743092340/collections_ky7hd1.avif"
       type="image/avif"
       media="(min-width: 941px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1743092340/collections_ky7hd1.avif"
-      imagesizes="744px"
+      fetchpriority="high"
     />
 
-    <!-- ✅ Tablet: 769px–940px -->
+    <!-- Tablet 769px–940px -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916,h_515/v1743092340/collections_ky7hd1.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1743092340/collections_ky7hd1.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916,h_515/v1743092340/collections_ky7hd1.avif"
-      imagesizes="916px"
+      fetchpriority="high"
     />
 
-    <!-- ✅ Mobile: 481px–768px -->
+    <!-- Mobile 481px–768px -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1743092340/collections_ky7hd1.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1743092340/collections_ky7hd1.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1743092340/collections_ky7hd1.avif"
-      imagesizes="744px"
+      fetchpriority="high"
     />
 
-    <!-- ✅ Optional fallback for ≤480px -->
+    <!-- Mobile ≤480px -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_456,h_256/v1743092340/collections_ky7hd1.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1743092340/collections_ky7hd1.avif"
       type="image/avif"
       media="(max-width: 480px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_456,h_256/v1743092340/collections_ky7hd1.avif"
-      imagesizes="480px"
+      fetchpriority="high"
     />
+
     <link
       class="tab-logo"
       rel="icon"
@@ -407,7 +404,7 @@
         <div class="menu-toggle" id="menu-toggle" role="button"   
           tabindex="0"  aria-label="Open Menu">
           <img
-            src="/img/hamburger-icon.png"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_96,h_96/v1750202370/hamburger-icon_bullxb.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
             fetchpriority="high"
@@ -415,6 +412,7 @@
             height="48"
             loading="eager"
             fetchpriority="high"
+            style="object-fit: cover; aspect-ratio: 48 /48;"
           />
         </div>
 
@@ -444,28 +442,28 @@
         <picture>
           <!-- Desktop ≥ 1025px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1743092340/collections_ky7hd1.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1743092340/collections_ky7hd1.avif"
             media="(min-width: 941px)"
             type="image/avif" />
 
           <!-- Tablet ≥ 769px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_916,h_515/v1743092340/collections_ky7hd1.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1743092340/collections_ky7hd1.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif" />
 
           <!-- Mobile ≤ 768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_744,h_418/v1743092340/collections_ky7hd1.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1743092340/collections_ky7hd1.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif" />
 
           <!-- Fallback -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1743092340/collections_ky7hd1.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1743092340/collections_ky7hd1.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
             width="164"
-            height="100"
+            height="168"
             style="object-fit: cover"
             fetchpriority="high"
             loading="eager"
