--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,7 +56,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1749319825/contact-image_kvbqam.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1749319825/contact-image_kvbqam.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -369,7 +369,7 @@
         <div class="menu-toggle" id="menu-toggle" role="button"   
           tabindex="0"  aria-label="Open Menu">
           <img
-            src="/img/hamburger-icon.png"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_96,h_96/v1750202370/hamburger-icon_bullxb.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
             fetchpriority="high"
@@ -377,6 +377,7 @@
             height="48"
             loading="eager"
             fetchpriority="high"
+            style="object-fit: cover; aspect-ratio: 48 /48;"
           />
         </div>
 
@@ -406,31 +407,31 @@
         <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_916/v1749319825/contact-image_kvbqam.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1749319825/contact-image_kvbqam.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_438/v1749319825/contact-image_kvbqam.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1749319825/contact-image_kvbqam.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_320/v1749319825/contact-image_kvbqam.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1749319825/contact-image_kvbqam.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
           
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_204/v1749319825/contact-image_kvbqam.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1749319825/contact-image_kvbqam.avif"
             alt=""
             width="164"
-            height="102"
+            height="168"
             style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
