--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -31,7 +31,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_946/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_948/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -41,7 +41,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_444/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
       fetchpriority="high"
@@ -51,7 +51,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_356/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
       fetchpriority="high"
@@ -61,7 +61,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_352/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -409,7 +409,7 @@
         <div class="menu-toggle" id="menu-toggle" role="button"   
           tabindex="0"  aria-label="Open Menu">
           <img
-            src="/img/hamburger-icon.png"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_96,h_96/v1750202370/hamburger-icon_bullxb.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
             fetchpriority="high"
@@ -417,6 +417,7 @@
             height="48"
             loading="eager"
             fetchpriority="high"
+            style="object-fit: cover; aspect-ratio: 48 /48;"
           />
         </div>
 
@@ -467,10 +468,10 @@
 
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
             alt="Welcome to Tech Trends hero image, a SEO optimized website showcasing a modern, futuristic design with technology vibes"
             width="164"
-            height="100"
+            height="168"
             style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
