--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -61,7 +61,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1748537741/sports-tube-mobile_j2lush.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1748537741/sports-tube-mobile_j2lush.avif"
       type="image/avif"
       media="(max-width: 480px)"
       fetchpriority="high"
@@ -398,7 +398,7 @@
         <div class="menu-toggle" id="menu-toggle" role="button"   
           tabindex="0"  aria-label="Open Menu">
           <img
-            src="/img/hamburger-icon.png"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_96,h_96/v1750202370/hamburger-icon_bullxb.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
             fetchpriority="high"
@@ -406,6 +406,7 @@
             height="48"
             loading="eager"
             fetchpriority="high"
+            style="object-fit: cover; aspect-ratio: 48 /48;"
           />
         </div>
 
@@ -457,10 +458,10 @@
 
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_200/v1748537741/sports-tube-mobile_j2lush.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_336/v1748537741/sports-tube-mobile_j2lush.avif"
             alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
             width="164"
-            height="100"
+            height="168"
             style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
