--- a/pages/project3/project3-the-grade.html
+++ b/pages/project3/project3-the-grade.html
@@ -459,7 +459,7 @@
         <div class="website-grade fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,/v1743469949/seo-grade_mmztmf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1364/v1743469949/seo-grade_mmztmf.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
