updated the hero desktop size project3 intro, testing

--- a/pages/project3/project3-the-design.html
+++ b/pages/project3/project3-the-design.html
@@ -431,7 +431,7 @@
             alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
             width="164"
             height="168"
-            style="object-fit: cover;"
+            style="object-fit: cover; aspect-ratio: 164 / 168;"
             fetchpriority="high"
             loading="eager"
             decoding="async"
