removed the aspect ratio from nav logo for project 3 intro, test

--- a/pages/project3/project3-intro.html
+++ b/pages/project3/project3-intro.html
@@ -402,7 +402,7 @@
               loading="eager"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: cover; aspect-ratio: 136 / 59;"
+              style="object-fit: cover;"
             />
           </a>
         </div>
