--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -494,31 +494,31 @@
           <picture> 
           <!-- Desktop ≥ 941px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_946/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1220/v1748605835/where-I-started-tech-trends_dq9svh.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
 
           <!-- Tablet 769px–940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1042,h_782/v1748605835/where-I-started-tech-trends_dq9svh.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif"
           />
 
           <!-- Mobile 481px–768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1748605835/where-I-started-tech-trends_dq9svh.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif"
           />
 
           <!-- Fallback ≤480px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_352/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_546,h_410/v1748605835/where-I-started-tech-trends_dq9svh.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
-            width="164"
-            height="176"
+            width="273"
+            height="205"
             style="object-fit: cover;"
             fetchpriority="high"
             loading="eager"
