changed thumbnail img sizing

--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -381,7 +381,7 @@
               loading="eager"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: cover;"
+              style="object-fit: cover; aspect-ratio: 144 / 62;"
             />
           </a>
         </div>
@@ -495,24 +495,24 @@
             <div class="thumbnails fancy-border-img">
               <picture class="github-container">
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1748467140/github-icon_tie2av.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_374/v1748467140/github-icon_tie2av.avif"
                   type="image/avif"
                   media="(min-width: 1200px) 100vw"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_418,h_346/v1748467140/github-icon_tie2av.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_346/v1748467140/github-icon_tie2av.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_292,h_242/v1748467140/github-icon_tie2av.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_206/v1748467140/github-icon_tie2av.avif"
                   alt="GitHub logo"
-                  width="146"
-                  height="121"
+                  width="127"
+                  height="103"
                   loading="auto"  
-                  style="aspect-ratio: 146 / 121; object-fit: cover;"
+                  style="object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -530,18 +530,18 @@
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_418,h_346/v1743469949/seo-grade_mmztmf.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1743469949/seo-grade_mmztmf.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_546,h_456/v1743469949/seo-grade_mmztmf.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1743469949/seo-grade_mmztmf.avif"
                   alt="Sports Tube PageSpeed Insights score showing 100/100 performance optimization for desktop and mobile"
-                  width="273"
-                  height="228"
+                  width="127"
+                  height="104"
                   loading="auto"  
-                  style="aspect-ratio: 273 / 228; object-fit: cover;"
+                  style="object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -559,18 +559,18 @@
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_418,h_346/v1747144506/past-meets-future_pmafy7.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1747144506/past-meets-future_pmafy7.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_292,h_242/v1747144506/past-meets-future_pmafy7.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1747144506/past-meets-future_pmafy7.avif"
                   alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
-                  width="146"
-                  height="121"
+                  width="127"
+                  height="104"
                   loading="auto"  
-                  style="aspect-ratio: 146 / 121; object-fit: cover;"
+                  style="object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -588,18 +588,18 @@
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_418,h_346/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_292,h_242/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1747002518/tech_trends_welcome_cute_robot_cfl5q5.avif"
                   alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
-                  width="146"
-                  height="121"
+                  width="127"
+                  height="104"
                   loading="auto"  
-                  style="aspect-ratio: 146 / 121; object-fit: cover;"
+                  style="object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
@@ -611,24 +611,24 @@
             <div class="thumbnails fancy-border-img">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_754,h_716/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_454,h_376/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
                   media="(min-width: 1200px)"
                   sizes="100vw"
                 />
                 <source
-                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_418,h_346/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_422,h_348/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   type="image/avif"
                   media="(min-width: 481px) and (max-width: 1199px)"
                   sizes="100vw"
                 />
                 <img 
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_292,h_242/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
+                  src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_254,h_208/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
                   alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
-                  width="146"
-                  height="121"
+                  width="127"
+                  height="104"
                   loading="auto"  
-                  style="aspect-ratio: 146 / 121; object-fit: cover;"
+                  style="object-fit: cover;"
                   fetchpriority="auto"
                   decoding="async"
                 />
